UtahLiveDataTest/src/objects/UserRegistration__c.object
<CustomObject>
    <fields>
        <fullName>TertiaryAreaOfExpertisePicklist__c</fullName>
        <description>Tertiary Area Of Expertise picklist</description>
        <inlineHelpText>Select tertiary area of expertise</inlineHelpText>
        <label>Tertiary Area Of Expertise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Prosecution</fullName>
                </value>
                <value>
                    <fullName>Shelter</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Courts</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Care Programs</fullName>
                </value>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>School-based Health Care</fullName>
                </value>
                <value>
                    <fullName>Capacity-building Initiatives</fullName>
                </value>
                <value>
                    <fullName>Capital Health (Construction) Projects</fullName>
                </value>
                <value>
                    <fullName>Children with Special Health Care Needs</fullName>
                </value>
                <value>
                    <fullName>Chronic Disease</fullName>
                </value>
                <value>
                    <fullName>Cancer Prevention and Treatment</fullName>
                </value>
                <value>
                    <fullName>Maternal and Child Health Services</fullName>
                </value>
                <value>
                    <fullName>Preventive Health Services</fullName>
                </value>
                <value>
                    <fullName>Breastfeeding</fullName>
                </value>
                <value>
                    <fullName>Home Visitation</fullName>
                </value>
                <value>
                    <fullName>HIV Prevention Services (by risk/population):</fullName>
                </value>
                <value>
                    <fullName>Adolescents/Young Adults</fullName>
                </value>
                <value>
                    <fullName>MSM</fullName>
                </value>
                <value>
                    <fullName>Hetrosexual women and men</fullName>
                </value>
                <value>
                    <fullName>Older Adults</fullName>
                </value>
                <value>
                    <fullName>Injection Drug Users</fullName>
                </value>
                <value>
                    <fullName>Transgendered Persons</fullName>
                </value>
                <value>
                    <fullName>HIV Care,Treatment and Support Services</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Outpatient Medical Care</fullName>
                </value>
                <value>
                    <fullName>Oral Health</fullName>
                </value>
                <value>
                    <fullName>Medical Case Management</fullName>
                </value>
                <value>
                    <fullName>Treatment Adherence Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TertiaryAreaOfExpertise__c</fullName>
        <inlineHelpText>Describe here the tertiary area of expertise selected.</inlineHelpText>
        <label>Tertiary Area Of Expertise</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TertiaryRepEmail__c</fullName>
        <description>This is from the product and is not being used anywhere.</description>
        <inlineHelpText>Enter Point of Contact’s E-mail address. For example xyz@abc.com</inlineHelpText>
        <label>Obsolete_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TertiaryRepFirstName__c</fullName>
        <label>First Name (Obsolete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TertiaryRepLastName__c</fullName>
        <label>Last Name (Obsolete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <description>This is the field to store the SSN of an individual applicant.</description>
        <label>UniqueID</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UniqueIdTypePicklist__c</fullName>
        <description>This field input the type of ID of a individual applicant</description>
        <label>UniqueIdTypePicklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>SSN</fullName>
                </value>
                <value>
                    <fullName>Drivers Licence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueIdType__c</fullName>
        <label>UniqueIdType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <inlineHelpText>The Username must be in email format but the email format does not need to be a valid email address. For example xyz@abc.com</inlineHelpText>
        <label>User Name</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UserRole1__c</fullName>
        <label>User Role (Obsolete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRoleFormula__c</fullName>
        <formula>IF( ISPICKVAL( UserRole__c ,&apos;Project Admin&apos;) ,&apos;Primary Applicant&apos;, &apos;Secondary Applicant&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <label>User Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Admin</fullName>
                </value>
                <value>
                    <fullName>Project Director</fullName>
                </value>
                <value>
                    <fullName>Project Staff</fullName>
                </value>
                <value>
                    <fullName>Reviewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the newly created community user</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Registration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <inlineHelpText>An administrative division of a city or borough that typically elects and is represented by a councilor or councilors</inlineHelpText>
        <label>Ward</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <inlineHelpText>This is Organization’s recognized Website</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Mailing Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>External Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EINo__c</columns>
        <columns>EINText__c</columns>
        <columns>EINumber__c</columns>
        <columns>DUNS__c</columns>
        <columns>OrganizationName__c</columns>
        <columns>Status__c</columns>
        <columns>UserRole__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UserName__c</columns>
        <columns>User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contact__c</columns>
        <columns>IsAutoCreteatedRecord__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ReviewerRegistrationApprover_UserRegistration</fullName>
        <filterScope>Queue</filterScope>
        <label>ReviewerRegistrationApprover</label>
        <queue>ReviewerRegistrationApprover</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UserRegistrationApprover_UserRegistration</fullName>
        <filterScope>Queue</filterScope>
        <label>UserRegistrationApprover</label>
        <queue>UserRegistrationApprover</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RG-{000000}</displayFormat>
        <label>User Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Registration</pluralLabel>
    <recordTypes>
        <fullName>AdditionalApplicant</fullName>
        <active>true</active>
        <label>Additional Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>AdditionalApplicantSecondary</fullName>
        <active>true</active>
        <label>Additional Applicant Secondary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Applicant</fullName>
        <active>true</active>
        <label>Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>IndApplicant</fullName>
        <active>true</active>
        <description>This is an individual applicant</description>
        <label>Ind Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reviewer</fullName>
        <active>true</active>
        <label>Reviewer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>This is a 3rd party registrant</description>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Duns_Expiration_cannot_be_a_past_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND( DUNSExpirationDate__c &lt;today(),TEXT(Status__c)==&apos;In Progress&apos;),DUNSExpirationDate__c&lt;&gt; NULL)</errorConditionFormula>
        <errorMessage>DUNS Expiration Date must be a Future Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fiscal_Year_End_Date_Validation</fullName>
        <active>true</active>
        <description>Fiscal_Year_End_Date_Validation</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(OrganizationFiscalYearEndDate__c)), 
OR(LEN(OrganizationFiscalYearEndDate__c)!=5),
!REGEX(OrganizationFiscalYearEndDate__c,&quot;[0-9]{2}/\\[0-9]{2}&quot;)
)</errorConditionFormula>
        <errorMessage>Please enter Organization Fiscal year End Date like MM/DD</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fiscal_Year_Start_Date_Validation</fullName>
        <active>true</active>
        <description>Fiscal_Year_Start_Date_Validation</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(OrganizationFiscalYearStartDate__c)), 
OR(LEN(OrganizationFiscalYearStartDate__c)!=5),
!REGEX(OrganizationFiscalYearStartDate__c,&quot;[0-9]{2}[/]{1}[0-9]{2}&quot;))</errorConditionFormula>
        <errorMessage>Please enter Organization Fiscal year Start Date like MM/DD</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IndZipCodeValidation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
PrimaryRepZipCode__c!= null, 
OR( 
LEN(PrimaryRepZipCode__c) &lt;&gt; 10, 
OR( 
NOT(CONTAINS(&quot;0123456789&quot;, LEFT( PrimaryRepZipCode__c, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 2, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 3, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 4, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 5, 1))), 
MID( PrimaryRepZipCode__c, 6, 1) &lt;&gt; &quot;-&quot;, 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 7, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 8, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 9, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 10, 1))) 
) 
) 
)</errorConditionFormula>
        <errorMessage>Zip code must be inxxxxx-xxxx format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OrganizationPhone</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

/* This part is to make sure the rule doesn&apos;t fire on a blank value Not() is used because the validation rule fires when it is true, we want it to fire when it is not blank */ 

NOT(ISBLANK(OrgnizationPhoneNumber__c)), 

OR( 
/* This First Part is an If Statement to ensure the number is 10 digits long and logically checks if it has an extension in the format of xdddd or x dddd only 4 digits is possible */ 
IF( 
AND(OR(Contains(OrgnizationPhoneNumber__c, &quot;x&quot;) , Contains(OrgnizationPhoneNumber__c,&quot;x&quot;)),REGEX(RIGHT(OrgnizationPhoneNumber__c,5), &quot;x[0-9]{4}&quot;)), 

NOT(REGEX(OrgnizationPhoneNumber__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{4}&quot;)), 

IF( 
AND(OR(Contains(OrgnizationPhoneNumber__c, &quot;x&quot;) , Contains(OrgnizationPhoneNumber__c,&quot;x&quot;)),REGEX(RIGHT(OrgnizationPhoneNumber__c,4), &quot;x[0-9]{3}&quot;)), 

NOT(REGEX(OrgnizationPhoneNumber__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{3}&quot;)), 

IF( 

AND(OR(Contains(OrgnizationPhoneNumber__c, &quot;x&quot;) , Contains(OrgnizationPhoneNumber__c,&quot;x&quot;)),REGEX(RIGHT(OrgnizationPhoneNumber__c,3), &quot;x[0-9]{2}&quot;)), 

NOT(REGEX(OrgnizationPhoneNumber__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{2}&quot;)), 

IF( 
AND(OR(Contains(OrgnizationPhoneNumber__c, &quot;x&quot;) , Contains(OrgnizationPhoneNumber__c,&quot;x&quot;)),REGEX(RIGHT(OrgnizationPhoneNumber__c,2), &quot;x[0-9]{1}&quot;)), 

NOT(REGEX(OrgnizationPhoneNumber__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{1}&quot;)), 

IF( 
AND(OR(Contains(OrgnizationPhoneNumber__c, &quot;x&quot;) , Contains(OrgnizationPhoneNumber__c,&quot;x&quot;)),REGEX(RIGHT(OrgnizationPhoneNumber__c,6), &quot;x\\ [0-9]{4}&quot;)), 

NOT(REGEX(OrgnizationPhoneNumber__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{4}&quot;)), 

IF( 
AND(OR(Contains(OrgnizationPhoneNumber__c, &quot;x&quot;) , Contains(OrgnizationPhoneNumber__c,&quot;x&quot;)),REGEX(RIGHT(OrgnizationPhoneNumber__c,5), &quot;x\\ [0-9]{3}&quot;)), 

NOT(REGEX(OrgnizationPhoneNumber__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{3}&quot;)), 

IF( 

AND(OR(Contains(OrgnizationPhoneNumber__c, &quot;x&quot;) , Contains(OrgnizationPhoneNumber__c,&quot;x&quot;)),REGEX(RIGHT(OrgnizationPhoneNumber__c,4), &quot;x\\ [0-9]{2}&quot;)), 

NOT(REGEX(OrgnizationPhoneNumber__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{2}&quot;)), 

IF( 
AND(OR(Contains(OrgnizationPhoneNumber__c, &quot;x&quot;) , Contains(OrgnizationPhoneNumber__c,&quot;x&quot;)),REGEX(RIGHT(OrgnizationPhoneNumber__c,3), &quot;x\\ [0-9]{1}&quot;)), 

NOT(REGEX(OrgnizationPhoneNumber__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{1}&quot;)), 


IF( 
LEFT(OrgnizationPhoneNumber__c,1)=&quot;(&quot;, 
NOT( REGEX(OrgnizationPhoneNumber__c, &quot;\\([0-9]{3}\\) [0-9]{3}-[0-9]{4}|\\d{10}&quot;)), 
NOT(REGEX(OrgnizationPhoneNumber__c, &quot;\\D*?(\\d\\D*?){10}&quot;)) 


))))))))), 

/* This part is to ensure that the number is not XXXXXXXXXX. NOTE: this does not work with 1111111111 */ 
mid(OrgnizationPhoneNumber__c, 2, 1) + mid(OrgnizationPhoneNumber__c, 2, 1) + mid(OrgnizationPhoneNumber__c, 2, 1) + mid 
(OrgnizationPhoneNumber__c, 2, 1) + mid(OrgnizationPhoneNumber__c, 2, 1) + mid(OrgnizationPhoneNumber__c, 2, 1) + mid(OrgnizationPhoneNumber__c, 2, 1) + mid 
(OrgnizationPhoneNumber__c, 2, 1) + mid(OrgnizationPhoneNumber__c, 2, 1) + mid(OrgnizationPhoneNumber__c, 2, 1) = mid(OrgnizationPhoneNumber__c, 2, 3)+ mid(OrgnizationPhoneNumber__c, 7, 3)+ mid(OrgnizationPhoneNumber__c, 11, 4), 

/* This is to ensure the phone is not 1111111111 */ 
OrgnizationPhoneNumber__c= &quot;1111111111&quot; 


))</errorConditionFormula>
        <errorMessage>Please enter a valid phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OrganizationTypeCheck</fullName>
        <active>true</active>
        <description>If Organization Type is Other, User must enter the Information in Other Text Field</description>
        <errorConditionFormula>AND( ISPICKVAL(OrganizationTypeSInglePicklist__c, &apos;Other&apos;) , ISBLANK(OrganizationTypeOther__c))</errorConditionFormula>
        <errorMessage>Please Enter value for &quot;If Other Please Specify.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PrRepZipcodeValidation</fullName>
        <active>true</active>
        <description>Primary Rep Zipcode Validation</description>
        <errorConditionFormula>AND( 
PrimaryRepZipCode__c!= null, 
OR( 
LEN(PrimaryRepZipCode__c) &lt;&gt; 10, 
OR( 
NOT(CONTAINS(&quot;0123456789&quot;, LEFT( PrimaryRepZipCode__c, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 2, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 3, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 4, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 5, 1))), 
MID( PrimaryRepZipCode__c, 6, 1) &lt;&gt; &quot;-&quot;, 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 7, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 8, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 9, 1))), 
NOT(CONTAINS(&quot;0123456789&quot;, MID( PrimaryRepZipCode__c, 10, 1))) 
) 
) 
)</errorConditionFormula>
        <errorMessage>Zip code must be in xxxxx-xxxx format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pri_and_Sec_Representative_same</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PrimaryRepFirstName__c  =  SecondaryRepFirstName__c  , PrimaryRepLastName__c  =  SecondaryRepLastName__c,PrimaryRepFirstName__c &lt;&gt; NULL ,SecondaryRepFirstName__c &lt;&gt; NULL ,PrimaryRepLastName__c &lt;&gt; NULL,SecondaryRepLastName__c &lt;&gt; NULL )</errorConditionFormula>
        <errorMessage>Primary and secondary representative first name and last name cannot be same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pri_and_Sec_Representative_same_email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PrimaryRepEmail__c = SecondaryRepEmail__c,PrimaryRepEmail__c &lt;&gt; NULL ,SecondaryRepEmail__c &lt;&gt; NULL)</errorConditionFormula>
        <errorMessage>Primary and secondary representative email address cannot be same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PrimaryRepPhone</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

/* This part is to make sure the rule doesn&apos;t fire on a blank value Not() is used because the validation rule fires when it is true, we want it to fire when it is not blank */ 

NOT(ISBLANK(PrimaryRepPhone__c)), 

OR( 
/* This First Part is an If Statement to ensure the number is 10 digits long and logically checks if it has an extension in the format of xdddd or x dddd only 4 digits is possible */ 
IF( 
AND(OR(Contains(PrimaryRepPhone__c, &quot;x&quot;) , Contains(PrimaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(PrimaryRepPhone__c,5), &quot;x[0-9]{4}&quot;)), 

NOT(REGEX(PrimaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{4}&quot;)), 

IF( 
AND(OR(Contains(PrimaryRepPhone__c, &quot;x&quot;) , Contains(PrimaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(PrimaryRepPhone__c,4), &quot;x[0-9]{3}&quot;)), 

NOT(REGEX(PrimaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{3}&quot;)), 

IF( 

AND(OR(Contains(PrimaryRepPhone__c, &quot;x&quot;) , Contains(PrimaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(PrimaryRepPhone__c,3), &quot;x[0-9]{2}&quot;)), 

NOT(REGEX(PrimaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{2}&quot;)), 

IF( 
AND(OR(Contains(PrimaryRepPhone__c, &quot;x&quot;) , Contains(PrimaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(PrimaryRepPhone__c,2), &quot;x[0-9]{1}&quot;)), 

NOT(REGEX(PrimaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{1}&quot;)), 

IF( 
AND(OR(Contains(PrimaryRepPhone__c, &quot;x&quot;) , Contains(PrimaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(PrimaryRepPhone__c,6), &quot;x\\ [0-9]{4}&quot;)), 

NOT(REGEX(PrimaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{4}&quot;)), 

IF( 
AND(OR(Contains(PrimaryRepPhone__c, &quot;x&quot;) , Contains(PrimaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(PrimaryRepPhone__c,5), &quot;x\\ [0-9]{3}&quot;)), 

NOT(REGEX(PrimaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{3}&quot;)), 

IF( 

AND(OR(Contains(PrimaryRepPhone__c, &quot;x&quot;) , Contains(PrimaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(PrimaryRepPhone__c,4), &quot;x\\ [0-9]{2}&quot;)), 

NOT(REGEX(PrimaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{2}&quot;)), 

IF( 
AND(OR(Contains(PrimaryRepPhone__c, &quot;x&quot;) , Contains(PrimaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(PrimaryRepPhone__c,3), &quot;x\\ [0-9]{1}&quot;)), 

NOT(REGEX(PrimaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{1}&quot;)), 


IF( 
LEFT(PrimaryRepPhone__c,1)=&quot;(&quot;, 
NOT( REGEX(PrimaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}-[0-9]{4}|\\d{10}&quot;)), 
NOT(REGEX(PrimaryRepPhone__c, &quot;\\D*?(\\d\\D*?){10}&quot;)) 


))))))))), 

/* This part is to ensure that the number is not XXXXXXXXXX. NOTE: this does not work with 1111111111 */ 
mid(PrimaryRepPhone__c, 2, 1) + mid(PrimaryRepPhone__c, 2, 1) + mid(PrimaryRepPhone__c, 2, 1) + mid 
(PrimaryRepPhone__c, 2, 1) + mid(PrimaryRepPhone__c, 2, 1) + mid(PrimaryRepPhone__c, 2, 1) + mid(PrimaryRepPhone__c, 2, 1) + mid 
(PrimaryRepPhone__c, 2, 1) + mid(PrimaryRepPhone__c, 2, 1) + mid(PrimaryRepPhone__c, 2, 1) = mid(PrimaryRepPhone__c, 2, 3)+ mid(PrimaryRepPhone__c, 7, 3)+ mid(PrimaryRepPhone__c, 11, 4), 

/* This is to ensure the phone is not 1111111111 */ 
PrimaryRepPhone__c= &quot;1111111111&quot; 


))</errorConditionFormula>
        <errorMessage>Please enter valid phone number for primary user</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReviewerPhone</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

/* This part is to make sure the rule doesn&apos;t fire on a blank value Not() is used because the validation rule fires when it is true, we want it to fire when it is not blank */ 

NOT(ISBLANK(ExternalReviewerPhone__c)), 

OR( 
/* This First Part is an If Statement to ensure the number is 10 digits long and logically checks if it has an extension in the format of xdddd or x dddd only 4 digits is possible */ 
IF( 
AND(OR(Contains(ExternalReviewerPhone__c, &quot;x&quot;) , Contains(ExternalReviewerPhone__c,&quot;x&quot;)),REGEX(RIGHT(ExternalReviewerPhone__c,5), &quot;x[0-9]{4}&quot;)), 

NOT(REGEX(ExternalReviewerPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{4}&quot;)), 

IF( 
AND(OR(Contains(ExternalReviewerPhone__c, &quot;x&quot;) , Contains(ExternalReviewerPhone__c,&quot;x&quot;)),REGEX(RIGHT(ExternalReviewerPhone__c,4), &quot;x[0-9]{3}&quot;)), 

NOT(REGEX(ExternalReviewerPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{3}&quot;)), 

IF( 

AND(OR(Contains(ExternalReviewerPhone__c, &quot;x&quot;) , Contains(ExternalReviewerPhone__c,&quot;x&quot;)),REGEX(RIGHT(ExternalReviewerPhone__c,3), &quot;x[0-9]{2}&quot;)), 

NOT(REGEX(ExternalReviewerPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{2}&quot;)), 

IF( 
AND(OR(Contains(ExternalReviewerPhone__c, &quot;x&quot;) , Contains(ExternalReviewerPhone__c,&quot;x&quot;)),REGEX(RIGHT(ExternalReviewerPhone__c,2), &quot;x[0-9]{1}&quot;)), 

NOT(REGEX(ExternalReviewerPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{1}&quot;)), 

IF( 
AND(OR(Contains(ExternalReviewerPhone__c, &quot;x&quot;) , Contains(ExternalReviewerPhone__c,&quot;x&quot;)),REGEX(RIGHT(ExternalReviewerPhone__c,6), &quot;x\\ [0-9]{4}&quot;)), 

NOT(REGEX(ExternalReviewerPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{4}&quot;)), 

IF( 
AND(OR(Contains(ExternalReviewerPhone__c, &quot;x&quot;) , Contains(ExternalReviewerPhone__c,&quot;x&quot;)),REGEX(RIGHT(ExternalReviewerPhone__c,5), &quot;x\\ [0-9]{3}&quot;)), 

NOT(REGEX(ExternalReviewerPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{3}&quot;)), 

IF( 

AND(OR(Contains(ExternalReviewerPhone__c, &quot;x&quot;) , Contains(ExternalReviewerPhone__c,&quot;x&quot;)),REGEX(RIGHT(ExternalReviewerPhone__c,4), &quot;x\\ [0-9]{2}&quot;)), 

NOT(REGEX(ExternalReviewerPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{2}&quot;)), 

IF( 
AND(OR(Contains(ExternalReviewerPhone__c, &quot;x&quot;) , Contains(ExternalReviewerPhone__c,&quot;x&quot;)),REGEX(RIGHT(ExternalReviewerPhone__c,3), &quot;x\\ [0-9]{1}&quot;)), 

NOT(REGEX(ExternalReviewerPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{1}&quot;)), 


IF( 
LEFT(ExternalReviewerPhone__c,1)=&quot;(&quot;, 
NOT( REGEX(ExternalReviewerPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}-[0-9]{4}|\\d{10}&quot;)), 
NOT(REGEX(ExternalReviewerPhone__c, &quot;\\D*?(\\d\\D*?){10}&quot;)) 


))))))))), 

/* This part is to ensure that the number is not XXXXXXXXXX. NOTE: this does not work with 1111111111 */ 
mid(ExternalReviewerPhone__c, 2, 1) + mid(ExternalReviewerPhone__c, 2, 1) + mid(ExternalReviewerPhone__c, 2, 1) + mid 
(ExternalReviewerPhone__c, 2, 1) + mid(ExternalReviewerPhone__c, 2, 1) + mid(ExternalReviewerPhone__c, 2, 1) + mid(ExternalReviewerPhone__c, 2, 1) + mid 
(ExternalReviewerPhone__c, 2, 1) + mid(ExternalReviewerPhone__c, 2, 1) + mid(ExternalReviewerPhone__c, 2, 1) = mid(ExternalReviewerPhone__c, 2, 3)+ mid(ExternalReviewerPhone__c, 7, 3)+ mid(ExternalReviewerPhone__c, 11, 4), 

/* This is to ensure the phone is not 1111111111 */ 
ExternalReviewerPhone__c= &quot;1111111111&quot; 


))</errorConditionFormula>
        <errorDisplayField>ExternalReviewerPhone__c</errorDisplayField>
        <errorMessage>Please enter a valid phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SecRepZipcodeValidation</fullName>
        <active>true</active>
        <description>Sec Rep Zipcode Validation</description>
        <errorConditionFormula>AND(
SecondaryRepZipCode__c!= null,
OR(
   LEN(SecondaryRepZipCode__c) &lt;&gt; 10,
   OR(
	NOT(CONTAINS(&quot;0123456789&quot;, LEFT( SecondaryRepZipCode__c, 1))),
	NOT(CONTAINS(&quot;0123456789&quot;, MID( SecondaryRepZipCode__c, 2, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( SecondaryRepZipCode__c, 3, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( SecondaryRepZipCode__c, 4, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( SecondaryRepZipCode__c, 5, 1))),
        MID( SecondaryRepZipCode__c, 6, 1) &lt;&gt; &quot;-&quot;,
        NOT(CONTAINS(&quot;0123456789&quot;, MID( SecondaryRepZipCode__c, 7, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( SecondaryRepZipCode__c, 8, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( SecondaryRepZipCode__c, 9, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( SecondaryRepZipCode__c, 10, 1)))
   )
)
)</errorConditionFormula>
        <errorMessage>Zip code must be in xxxxx-xxxx format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SecondaryRepPhone</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

/* This part is to make sure the rule doesn&apos;t fire on a blank value Not() is used because the validation rule fires when it is true, we want it to fire when it is not blank */ 

NOT(ISBLANK(SecondaryRepPhone__c)), 

OR( 
/* This First Part is an If Statement to ensure the number is 10 digits long and logically checks if it has an extension in the format of xdddd or x dddd only 4 digits is possible */ 
IF( 
AND(OR(Contains(SecondaryRepPhone__c, &quot;x&quot;) , Contains(SecondaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(SecondaryRepPhone__c,5), &quot;x[0-9]{4}&quot;)), 

NOT(REGEX(SecondaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{4}&quot;)), 

IF( 
AND(OR(Contains(SecondaryRepPhone__c, &quot;x&quot;) , Contains(SecondaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(SecondaryRepPhone__c,4), &quot;x[0-9]{3}&quot;)), 

NOT(REGEX(SecondaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{3}&quot;)), 

IF( 

AND(OR(Contains(SecondaryRepPhone__c, &quot;x&quot;) , Contains(SecondaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(SecondaryRepPhone__c,3), &quot;x[0-9]{2}&quot;)), 

NOT(REGEX(SecondaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{2}&quot;)), 

IF( 
AND(OR(Contains(SecondaryRepPhone__c, &quot;x&quot;) , Contains(SecondaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(SecondaryRepPhone__c,2), &quot;x[0-9]{1}&quot;)), 

NOT(REGEX(SecondaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x[0-9]{1}&quot;)), 

IF( 
AND(OR(Contains(SecondaryRepPhone__c, &quot;x&quot;) , Contains(SecondaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(SecondaryRepPhone__c,6), &quot;x\\ [0-9]{4}&quot;)), 

NOT(REGEX(SecondaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{4}&quot;)), 

IF( 
AND(OR(Contains(SecondaryRepPhone__c, &quot;x&quot;) , Contains(SecondaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(SecondaryRepPhone__c,5), &quot;x\\ [0-9]{3}&quot;)), 

NOT(REGEX(SecondaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{3}&quot;)), 

IF( 

AND(OR(Contains(SecondaryRepPhone__c, &quot;x&quot;) , Contains(SecondaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(SecondaryRepPhone__c,4), &quot;x\\ [0-9]{2}&quot;)), 

NOT(REGEX(SecondaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{2}&quot;)), 

IF( 
AND(OR(Contains(SecondaryRepPhone__c, &quot;x&quot;) , Contains(SecondaryRepPhone__c,&quot;x&quot;)),REGEX(RIGHT(SecondaryRepPhone__c,3), &quot;x\\ [0-9]{1}&quot;)), 

NOT(REGEX(SecondaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}\\-[0-9]{4} x\\ [0-9]{1}&quot;)), 


IF( 
LEFT(SecondaryRepPhone__c,1)=&quot;(&quot;, 
NOT( REGEX(SecondaryRepPhone__c, &quot;\\([0-9]{3}\\) [0-9]{3}-[0-9]{4}|\\d{10}&quot;)), 
NOT(REGEX(SecondaryRepPhone__c, &quot;\\D*?(\\d\\D*?){10}&quot;)) 


))))))))), 

/* This part is to ensure that the number is not XXXXXXXXXX. NOTE: this does not work with 1111111111 */ 
mid(SecondaryRepPhone__c, 2, 1) + mid(SecondaryRepPhone__c, 2, 1) + mid(SecondaryRepPhone__c, 2, 1) + mid 
(SecondaryRepPhone__c, 2, 1) + mid(SecondaryRepPhone__c, 2, 1) + mid(SecondaryRepPhone__c, 2, 1) + mid(SecondaryRepPhone__c, 2, 1) + mid 
(SecondaryRepPhone__c, 2, 1) + mid(SecondaryRepPhone__c, 2, 1) + mid(SecondaryRepPhone__c, 2, 1) = mid(SecondaryRepPhone__c, 2, 3)+ mid(SecondaryRepPhone__c, 7, 3)+ mid(SecondaryRepPhone__c, 11, 4), 

/* This is to ensure the phone is not 1111111111 */ 
SecondaryRepPhone__c= &quot;1111111111&quot; 


))</errorConditionFormula>
        <errorMessage>Please enter valid phone number for secondary user</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserZipCodeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ExternalReviewerZipCode__c!= null,
OR(
   LEN(ExternalReviewerZipCode__c) &lt;&gt; 10,
   OR(
	NOT(CONTAINS(&quot;0123456789&quot;, LEFT( ExternalReviewerZipCode__c, 1))),
	NOT(CONTAINS(&quot;0123456789&quot;, MID( ExternalReviewerZipCode__c, 2, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( ExternalReviewerZipCode__c, 3, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( ExternalReviewerZipCode__c, 4, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( ExternalReviewerZipCode__c, 5, 1))),
        MID( ExternalReviewerZipCode__c, 6, 1) &lt;&gt; &quot;-&quot;,
        NOT(CONTAINS(&quot;0123456789&quot;, MID( ExternalReviewerZipCode__c, 7, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( ExternalReviewerZipCode__c, 8, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( ExternalReviewerZipCode__c, 9, 1))),
        NOT(CONTAINS(&quot;0123456789&quot;, MID( ExternalReviewerZipCode__c, 10, 1)))
   )
)
)</errorConditionFormula>
        <errorMessage>Zip code must be in xxxxx-xxxx format.</errorMessage>
    </validationRules>
</CustomObject>